--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "test": "pnpm prettier:check"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@remixicon/react": "^4.6.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "geist": "^1.3.1",
     "next": "15.0.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
+    "remixicon": "^4.6.0",
     "sonner": "^1.7.0"
   },
   "devDependencies": {
