--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "pnpm prettier:check"
+    "test": "npm prettier:check"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
