--- a/package.json
+++ b/package.json
@@ -12,16 +12,24 @@
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@remixicon/react": "^4.6.0",
+    "accordion": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "geist": "^1.3.1",
-    "next": "15.0.4",
+    "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
+    "next": "^15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "remixicon": "^4.6.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "swiper": "^11.2.6",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
