--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@remixicon/react": "^4.6.0",
+    "@vercel/analytics": "^1.5.0",
     "accordion": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
