--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@remixicon/react": "^4.6.0",
     "@vercel/analytics": "^1.5.0",
     "accordion": "^3.0.2",
@@ -26,6 +27,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "react-iframe": "^1.8.5",
     "remixicon": "^4.6.0",
     "sonner": "^1.7.0",
     "swiper": "^11.2.6",
